# ai-trading-agent

./: .gitignore  README.md  combined_graph.py  combined_state.py  graph.py  main.py  nse_fetcher.py  pyproject.toml  requirements.txt  run.py  state.py  telegram_chat_id.py  telegram_test.py  twitter_graph.py  twitter_main.py  twitter_state.py
nodes/: dedup_node.py  market_node.py  noise_filter_node.py  order_filter_node.py  pdf_node.py  pdf_summary_node.py  query_node.py  reasoning_node.py  report_node.py  search_node.py  signal_node.py  stock_detector_node.py  telegram_node.py  tweet_collector_node.py  tweet_summarizer_node.py  twitter_telegram_node.py  validation_node.py
services/: dedup_service.py  kite_service.py  llm_service.py  ollama_service.py  order_filter_service.py  pdf_service.py  stock_detector_service.py  tavily_service.py  telegram_service.py  twitter_scraper_service.py
utils/: logger.py  retry.py
