[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kiteconnect>=5.2.0",
    "langchain>=1.2.15",
    "langgraph>=1.1.9",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
